--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@solana/web3.js": "^1.95.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.0",
     "next-transpile-modules": "^10.0.1",
