--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
+    "motion": "^11.15.0",
     "next": "15.1.0",
     "next-auth": "^4.24.11",
     "next-transpile-modules": "^10.0.1",
