--- a/.github/workflows/cl.yaml
+++ b/.github/workflows/cl.yaml
@@ -19,7 +19,7 @@ jobs:
           node-version: "18.18"
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run linting
         run: npm run lint
