--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -1,13 +1,14 @@
-name: Vercel Production Deployment
+name: Production Deployment
 
 env:
   VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
   VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["CI Workflow"]
+    types:
+      - completed
 
 jobs:
   deploy-production:
