Production Deployment starts only after CI is successful

--- a/.github/workflows/prod.yaml
+++ b/.github/workflows/prod.yaml
@@ -8,7 +8,9 @@ on:
   workflow_run:
     workflows: ["CI Workflow"]
     types:
-      - completed
+      - success
+    branches:
+      - main
 
 jobs:
   deploy-production:
