--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^6.1.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -27,7 +26,6 @@
     "lucide-react": "^0.468.0",
     "motion": "^11.15.0",
     "next": "15.1.0",
-    "next-auth": "^4.24.11",
     "next-transpile-modules": "^10.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -43,7 +41,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.0",
     "postcss": "^8",
-    "prisma": "^6.1.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
